Router/Feature module VS shared/widget modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 
 <h1>Hello {{ title }}!</h1>
 
-<app-playlist-view></app-playlist-view>
-
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
