CSS, host, host-context, ng-deep

--- a/src/app/playlists/components/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/components/playlist-list/playlist-list.component.html
@@ -1,1 +1,6 @@
 <p>playlist-list works!</p>
+
+
+<app-playlist-list-item></app-playlist-list-item>
+<app-playlist-list-item></app-playlist-list-item>
+<app-playlist-list-item></app-playlist-list-item>
