--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -1,7 +1,8 @@
 <p>playlist-view works!</p>
 
 
-<app-playlist-list></app-playlist-list>
+<app-playlist-list class="selected"></app-playlist-list>
 
+<app-playlist-details></app-playlist-details>
 
-<app-card></app-card>
+<app-playlist-form></app-playlist-form>
