Boostrap CSS, SCSS, variables,mixins

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <h1>Hello {{ title }}!</h1>
 <p>Something</p>
 
+<button class="btn btn-primary">Primary</button>
+
 <router-outlet></router-outlet>
