--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+// @import "~bootstrap/scss/bootstrap.scss";
 
+
+
+$primary: hotpink ;
+$enable-rounded:  false ;
+$spacer: 0.7rem ;
+
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/images";
+
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/buttons";
+
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
 
 p{
   color: red;
