--- a/src/app/playlists/components/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/components/playlist-list/playlist-list.component.html
@@ -1,6 +1,10 @@
-<p>playlist-list works!</p>
 
 
-<app-playlist-list-item></app-playlist-list-item>
-<app-playlist-list-item></app-playlist-list-item>
-<app-playlist-list-item></app-playlist-list-item>
+<!-- .list-group>.list-group-item{Text $}*3 -->
+<!-- .list-group>.list-group-item*3 -->
+
+<div class="list-group">
+  <div class="list-group-item">Text 1</div>
+  <div class="list-group-item">Text 2</div>
+  <div class="list-group-item">Text 3</div>
+</div>
