--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,22 @@
 
-<h1>Hello {{ title }}!</h1>
-<p>Something</p>
 
-<button class="btn btn-primary">Primary</button>
+  <!-- .container>.row>.col -->
+  
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Hello {{ title }}!</h1>
 
-<router-outlet></router-outlet>
+        {{ alert('test') }}
+
+        {{ counter }}
+        
+        <router-outlet></router-outlet>
+
+
+      </div>
+    </div>
+  </div>
+
+
+
