--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -1,8 +1,15 @@
-<p>playlist-view works!</p>
 
+<!-- .row>.col*2{text $$} -->
 
-<app-playlist-list class="selected"></app-playlist-list>
+<div class="row">
+  <div class="col">
+    <app-playlist-list></app-playlist-list>
+    
+  </div>
+  <div class="col">    
+    <app-playlist-details></app-playlist-details>
+    <app-playlist-form></app-playlist-form>
 
-<app-playlist-details></app-playlist-details>
+  </div>
+</div>
 
-<app-playlist-form></app-playlist-form>
