--- a/src/app/playlists/components/playlist-details/playlist-details.component.html
+++ b/src/app/playlists/components/playlist-details/playlist-details.component.html
@@ -2,12 +2,22 @@
 
 <pre>{{ playlist | json }}</pre>
 
-<dl>
+<dl [id]="'playlist_' + playlist.id" 
+    [attr.data-id]="playlist.id" [title]="playlist.name">
+
   <dt>Name:</dt>
   <dd>{{ playlist.name | titlecase  }}</dd>
 
   <dt>Public:</dt>
-  <dd>{{ playlist.public | yesno:'yeah':'nope' | titlecase }}</dd>
+  <!-- [style.border]=" '1px solid ' " -->
+  <dd 
+  style="border-bottom:1px solid black"
+  [style.color]="playlist.public ? 'red' : 'blue'"
+  [style.border-bottom-color]="playlist.public ? 'red' : 'blue'"
+  
+  >
+    {{ playlist.public | yesno }}
+  </dd>
   <!-- <dd>{{ playlist.public ? 'Yes' : 'No' }}</dd> -->
   <!-- <dd>{{ yesno(playlist.options.public) }}</dd> -->
 
