--- a/src/app/playlists/components/playlist-details/playlist-details.component.html
+++ b/src/app/playlists/components/playlist-details/playlist-details.component.html
@@ -2,27 +2,42 @@
 
 <pre>{{ playlist | json }}</pre>
 
-<dl [id]="'playlist_' + playlist.id" 
-    [attr.data-id]="playlist.id" [title]="playlist.name">
+<dl [id]="'playlist_' + playlist.id" [attr.data-id]="playlist.id" [title]="playlist.name">
 
   <dt>Name:</dt>
   <dd>{{ playlist.name | titlecase  }}</dd>
 
   <dt>Public:</dt>
   <!-- [style.border]=" '1px solid ' " -->
-  
+
   <!-- <dd 
   style="border-bottom:1px solid black"
   [style.color]="playlist.public ? 'red' : 'blue'"
   [style.border-bottom-color]="playlist.public ? 'red' : 'blue'"
     >{{ playlist.public | yesno }}</dd> -->
 
-  <dd 
+  <!-- <dd 
   style="border-bottom:1px solid black"
   [ngStyle]="{
     color: playlist.public ? 'red' : 'blue',
     'border-bottom-color': playlist.public ? 'red' : 'blue'
+  }">{{ playlist.public | yesno }}</dd> -->
+
+  <!-- <dd [class]=" playlist.public ? 'public' : 'private'">
+    {{ playlist.public | yesno }}</dd> -->
+
+  <dd class="public-or-private" 
+  [class.is-public]=" playlist.public" 
+  [class.is-private]=" ! playlist.public">
+    {{ playlist.public | yesno }}</dd>
+
+  <dd class="public-or-private" [ngClass]="{
+    'is-public': playlist.public,
+    'is-private': ! playlist.public
   }">{{ playlist.public | yesno }}</dd>
+
+  <!-- <dd class="public-or-private" [ngClass]="getMyMyStyles()">
+    {{ playlist.public | yesno }}</dd> -->
 
   <!-- <dd>{{ playlist.public ? 'Yes' : 'No' }}</dd> -->
   <!-- <dd>{{ yesno(playlist.options.public) }}</dd> -->
