--- a/src/app/playlists/components/playlist-form/playlist-form.component.html
+++ b/src/app/playlists/components/playlist-form/playlist-form.component.html
@@ -1,23 +1,24 @@
 <pre>{{playlist | json}}</pre>
 
-<!-- (input)=" playlist.name = $event.target.value" -->
-
 <div class="form-group">
   <label>Name:</label>
   <input type="text" class="form-control" 
     [value]="playlist.name"
-    #nameInputREf>
-  {{ 170 - nameInputREf.value.length }} / 170
+    (input)=" playlist.name = $event.target.value">
+  {{ 170 - playlist.name.length }} / 170
 </div>
 
 <div class="form-group">
-  <label><input type="checkbox" [checked]="playlist.public"> Public</label>
+  <label><input type="checkbox" 
+    (change)="playlist.public = $event.target.checked"
+    [checked]="playlist.public"> Public</label>
 </div>
 
 <div class="form-group">
   <label>Description</label>
   <textarea 
+  [value]="playlist.description"
   (input)=" playlist.description = $event.target.value" 
   
-  class="form-control" [value]="playlist.description"></textarea>
+  class="form-control" ></textarea>
 </div>
