--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -1,21 +1,35 @@
 <div class="row">
   <div class="col">
     <app-playlist-list></app-playlist-list>
-    
-  </div>
-  <div class="col">    
 
-    <div [hidden]=" mode !== 'details'">
-      <app-playlist-details></app-playlist-details>
-      <button class="btn btn-info" (click)="edit()">Edit</button>
-    </div>
-    
-    <div [hidden]=" mode !== 'form'">
-      <app-playlist-form></app-playlist-form>
-      <button class="btn btn-danger"  (click)="cancel()">Cancel</button>
-      <button class="btn btn-success"  (click)="save()">Save</button>
-    </div>
+  </div>
+  <div class="col">
+
+    <ng-template [ngIf]=" mode == 'details' " 
+                 [ngIfThen]="detailsTplRef"
+                 [ngIfElse]="formTplRef">
+    </ng-template>
+
 
   </div>
 </div>
 
+
+
+
+
+<ng-template #detailsTplRef>
+  <div>
+    <app-playlist-details></app-playlist-details>
+    <button class="btn btn-info" (click)="edit()">Edit</button>
+  </div>
+</ng-template>
+
+
+<ng-template #formTplRef>
+  <div>
+    <app-playlist-form></app-playlist-form>
+    <button class="btn btn-danger" (click)="cancel()">Cancel</button>
+    <button class="btn btn-success" (click)="save()">Save</button>
+  </div>
+</ng-template>
