emitting events from children - reusable children, logic in parents

--- a/src/app/playlists/components/playlist-form/playlist-form.component.html
+++ b/src/app/playlists/components/playlist-form/playlist-form.component.html
@@ -22,3 +22,7 @@
   
   class="form-control" ></textarea>
 </div>
+
+
+<button class="btn btn-danger" (click)="cancel()">Cancel</button>
+<button class="btn btn-success" (click)="save()">Save</button>
