emitting events from components

--- a/src/app/playlists/components/playlist-details/playlist-details.component.html
+++ b/src/app/playlists/components/playlist-details/playlist-details.component.html
@@ -1,6 +1,6 @@
 <!-- dl>(dt{label}+dd{value})*3 -->
 
-<pre>{{ playlist | json }}</pre>
+<!-- <pre>{{ playlist | json }}</pre> -->
 
 <dl [id]="'playlist_' + playlist.id" 
     [attr.data-id]="playlist.id"
