--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col">
         
+    <!-- [(selected)]="selected" -->
     <app-playlist-list     
-      [(selected)]="selected"
+      [selected]="selected"
+      (selectedChange)="selectPlaylist($event)"
       [items]="playlists">
     </app-playlist-list>
         
