Homework - search music mock UI with mock data

--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -26,7 +26,7 @@
       <div *ngSwitchCase=" 'form' ">
         <app-playlist-form
         (cancelClicked)="cancel()"
-        (saveClicked)="save()"
+        (saveClicked)="save($event)"
         [playlist]="selected"
         ></app-playlist-form>
 
