--- a/src/app/playlists/components/playlist-form/playlist-form.component.html
+++ b/src/app/playlists/components/playlist-form/playlist-form.component.html
@@ -1,26 +1,30 @@
-<pre>{{playlist | json}}</pre>
-<pre>{{draft | json}}</pre>
+<!-- <pre>{{playlist | json}}</pre>
+<pre>{{draft | json}}</pre> -->
 
-<div class="form-group">
-  <label>Name:</label>
-  <input type="text" class="form-control"
-   [ngModel]="playlist.name" #nameRef="ngModel">
-  {{ 170 - nameRef.value?.length }} / 170
-</div>
+<form #formRef="ngForm">
+  <!-- <input type="text" ngModel [ngModelOptions]="{standalone:true}"> -->
 
-<div class="form-group">
-  <label><input type="checkbox" [ngModel]="playlist.public"> Public</label>
-</div>
+  <div class="form-group">
+    <label>Name:</label>
+    <input type="text" class="form-control" [ngModel]="playlist.name" name="name"  #nameRef="ngModel">
 
-<div class="form-group">
-  <label>Description</label>
-  <textarea   [ngModel]="playlist.description"
+    {{ 170 - nameRef.value?.length }} / 170
+  </div>
+
+  <div ngModelGroup="bananas">
+
+    <div class="form-group">
+      <label><input type="checkbox" [ngModel]="playlist.public" name="public"> Public</label>
+    </div>
   
-  class="form-control" ></textarea>
-</div>
+    <div class="form-group">
+      <label>Description</label>
+      <textarea [ngModel]="playlist.description" name="description"  class="form-control"></textarea>
+    </div>
+  </div>
 
-<div></div>
+  <button class="btn btn-danger" (click)="cancel()">Cancel</button>
+  <button class="btn btn-success" (click)="save(formRef)">Save</button>
+</form>
 
 
-<button class="btn btn-danger" (click)="cancel()">Cancel</button>
-<button class="btn btn-success" (click)="save()">Save</button>
