Search album results html - @HostBinding(class.card)

--- a/src/app/music-search/containers/album-search/album-search.component.html
+++ b/src/app/music-search/containers/album-search/album-search.component.html
@@ -1,1 +1,13 @@
 <p>album-search works!</p>
+
+<!-- .row*2>.col -->
+<div class="row">
+  <div class="col">
+    <app-search-form></app-search-form>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <app-search-results></app-search-results>
+  </div>
+</div>
