--- a/src/app/music-search/components/search-results/search-results.component.html
+++ b/src/app/music-search/components/search-results/search-results.component.html
@@ -1,1 +1,8 @@
 <p>search-results works!</p>
+
+<div class="card-group">
+  <app-album-card></app-album-card>
+  <app-album-card></app-album-card>
+  <app-album-card></app-album-card>
+
+</div>
