--- a/src/app/music-search/components/search-form/search-form.component.html
+++ b/src/app/music-search/components/search-form/search-form.component.html
@@ -1,1 +1,8 @@
-<p>search-form works!</p>
+<div class="input-group mb-3">
+  
+  <input type="text" class="form-control" placeholder="Search albums">
+
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary">Search</button>
+  </div>
+</div>
