Handlig local assets - images,fonts,tsc - assets dir or reference from styles

--- a/src/app/music-search/components/search-results/search-results.component.html
+++ b/src/app/music-search/components/search-results/search-results.component.html
@@ -1,7 +1,7 @@
 
 <div class="card-group">
-  <app-album-card></app-album-card>
-  <app-album-card></app-album-card>
-  <app-album-card></app-album-card>
+
+  <app-album-card *ngFor="let result of results" [album]="result">
+  </app-album-card>
 
 </div>
