--- a/src/app/music-search/containers/album-search/album-search.component.html
+++ b/src/app/music-search/containers/album-search/album-search.component.html
@@ -8,6 +8,6 @@
 </div>
 <div class="row">
   <div class="col">
-    <app-search-results></app-search-results>
+    <app-search-results [results]="results"></app-search-results>
   </div>
 </div>
