--- a/src/app/music-search/containers/album-search/album-search.component.html
+++ b/src/app/music-search/containers/album-search/album-search.component.html
@@ -1,9 +1,8 @@
-<p>album-search works!</p>
 
 <!-- .row*2>.col -->
 <div class="row">
   <div class="col">
-    <app-search-form></app-search-form>
+    <app-search-form (searchChange)="searchAlbums($event)"></app-search-form>
   </div>
 </div>
 <div class="row">
