--- a/src/app/music-search/components/search-form/search-form.component.html
+++ b/src/app/music-search/components/search-form/search-form.component.html
@@ -1,6 +1,8 @@
 <div class="input-group mb-3">
 
-  <input class="form-control" placeholder="Search albums" #queryElem 
+  <input class="form-control" placeholder="Search albums" #queryElem
+  
+     #queryModel="ngModel"
       [(ngModel)]="query">
 
 
