--- a/src/app/music-search/containers/album-search/album-search.component.html
+++ b/src/app/music-search/containers/album-search/album-search.component.html
@@ -7,6 +7,7 @@
 </div>
 <div class="row">
   <div class="col">
+    {{message}}
     <app-search-results [results]="results"></app-search-results>
   </div>
 </div>
