Removed the piggy background

--- a/src/app/music-search/components/album-card/album-card.component.scss
+++ b/src/app/music-search/components/album-card/album-card.component.scss
@@ -2,6 +2,6 @@
   display: block;
 }
 
-:host{
-  background: url('./icons/download.jpg');
-}
+// :host{
+  // background: url('./icons/download.jpg');
+// }
