--- a/src/app/music-search/components/search-form/search-form.component.html
+++ b/src/app/music-search/components/search-form/search-form.component.html
@@ -1,9 +1,7 @@
 <div class="input-group mb-3">
 
-  <input class="form-control" placeholder="Search albums" #queryElem
-  
-     #queryModel="ngModel"
-      [(ngModel)]="query">
+  <input class="form-control" placeholder="Search albums" 
+    [formControl]="queryForm.get('query')">
 
 
   <div class="input-group-append">
