--- a/src/app/music-search/components/search-form/search-form.component.html
+++ b/src/app/music-search/components/search-form/search-form.component.html
@@ -6,34 +6,11 @@
 
     <input class="form-control" placeholder="Search albums" formControlName="query">
 
-    <div class="input-group-append">
+    <!-- <div class="input-group-append">
       <button class="btn btn-outline-secondary" (click)="search()">
         Search
       </button>
-    </div>
+    </div> -->
   </div>
-
-  <!-- <select [formControl]="queryForm.get('extras.type')"> -->
-
-  <div formGroupName="extras">
-    <select class="form-control" formControlName="type">
-      <option value="album">Album</option>
-      <option value="artist">Artist</option>
-    </select>
-  </div>
-
-  <ul formGroupName="extras">
-    <ng-container formArrayName="markets">
-
-      <li [formGroup]="market" class="input-group"
-      
-      *ngFor="let market of markets.controls">
-        <input type="text" class="form-control" formControlName="code">
-        <span class="close" (click)="removeMarket(market)">&times;</span>
-      </li>
-
-    </ng-container>
-  </ul>
-  <button class="btn btn-primary" (click)="addMarket()">Add Market</button>
-
+  
 </div>
