EventEmitter, Subject, ReplaySubject ,AsyncSubject, BehaviorSubject

--- a/src/app/music-search/containers/sync-search/sync-search.component.html
+++ b/src/app/music-search/containers/sync-search/sync-search.component.html
@@ -4,6 +4,7 @@
     <app-album-search></app-album-search>
   </div>
   <div class="col">
-    <app-album-search></app-album-search>
+    <button (click)="hide = !hide">Toggle</button>
+    <app-album-search *ngIf="hide"></app-album-search>
   </div>
 </div>
