Synchornizing forms with reactive service

--- a/src/app/music-search/containers/album-search/album-search.component.html
+++ b/src/app/music-search/containers/album-search/album-search.component.html
@@ -2,7 +2,10 @@
 <!-- .row*2>.col -->
 <div class="row">
   <div class="col">
-    <app-search-form (searchChange)="searchAlbums($event)"></app-search-form>
+    <app-search-form
+      [query]="query"
+     (searchChange)="searchAlbums($event)">
+    </app-search-form>
   </div>
 </div>
 <div class="row">
