--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,36 @@
-
-
-  <!-- .container>.row>.col -->
-  
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <h1>Hello {{ title }}!</h1>
-        
-        <router-outlet></router-outlet>
+    <a class="navbar-brand" routerLinkActive="active" routerLink="/">{{title}}</a>
 
+    <button class="navbar-toggler" (click)="expanded = !expanded" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      </div>
+    <div class="collapse navbar-collapse" [class.show]="expanded">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/search"
+            [routerLinkActiveOptions]="{exact:true}">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/search/albums">Search Albums</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/playlists">Playlists</a>
+        </li>
+      </ul>
     </div>
   </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+
+      <router-outlet></router-outlet>
 
 
-
+    </div>
+  </div>
+</div>
