--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
 
     <div class="collapse navbar-collapse" [class.show]="expanded">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/search"
             [routerLinkActiveOptions]="{exact:true}">Search</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/search/albums">Search Albums</a>
         </li>
